--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pandas = "^2.2"
 fcd = "^1.2"
 rdkit = "^2023.9.4"
 pre-commit = "^3.6.0"
+guacamol = { path = "./src/guacamol", develop = true }
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.14"
