--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 python = ">=3.11,<3.12"
 torch = "^2.1"  # Original v1.10
 joblib = "^1.3"
-numpy = ">=1.23.5,<2"  # Original v1.21.4
+numpy = ">=1.26,<2"  # Original v1.21.4
 tqdm = "^4.66"
 # tensorflow = "^2.15"  # Original 1.13.2
 # keras = "^2.15"  # Original v2.3.1
@@ -20,6 +20,8 @@ fcd = "^1.2"
 rdkit = "^2023.9.4"
 pre-commit = "^3.6.0"
 guacamol = { path = "./src/guacamol", develop = true }
+scipy = "^1.12.0"
+pyarrow = "^15.0.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.14"
