--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,10 @@ repos:
   rev: 1.7.1
   hooks:
     - id: poetry-check
+- repo: https://github.com/pycqa/isort
+  rev: 5.13.2
+  hooks:
+    - id: isort
 - repo: https://github.com/astral-sh/ruff-pre-commit
   rev: v0.1.14
   hooks:
