--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
-torch = "^2.1"  # Original v1.10
-joblib = "^1.3"
-numpy = ">=1.26,<2"  # Original v1.21.4
-tqdm = "^4.66"
+torch = "^2.1"          # Original 1.10
+joblib = "^1.3"         # Original 0.12.5
+numpy = ">=1.26,<2"     # Original 1.21.4
+tqdm = "^4.66"          # Original 4.26.0
 # tensorflow = "^2.15"  # Original 1.13.2
-# keras = "^2.15"  # Original v2.3.1
-h5py = "3.10"  # Original v2.10
+# keras = "^2.15"       # Original 2.3.1
+h5py = "3.10"           # Original 2.10
 pandas = "^2.2"
 fcd = "^1.2"
 rdkit = "^2023.9.4"
@@ -22,10 +22,13 @@ pre-commit = "^3.6.0"
 guacamol = { path = "./src/guacamol", develop = true }
 scipy = "^1.12.0"
 pyarrow = "^15.0.0"
+loguru = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
+isort = "^5.13.2"
 ruff = "^0.1.14"
 mypy = "^1.8.0"
+pandas-stubs = "^2.1.4.231227"
 
 [build-system]
 requires = ["poetry-core"]
