--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/guacamol"]
 	path = src/guacamol
-	url = https://github.com/hogru/guacamol
+	url = https://hogru@github.com/hogru/guacamol
