--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,7 @@ torch = "^2.1"          # Original 1.10
 joblib = "^1.3"         # Original 0.12.5
 numpy = ">=1.26,<2"     # Original 1.21.4
 tqdm = "^4.66"          # Original 4.26.0
-# tensorflow = "^2.15"  # Original 1.13.2
-# keras = "^2.15"       # Original 2.3.1
-h5py = "3.10"           # Original 2.10
+# h5py = "3.10"
 pandas = "^2.2"
 fcd = "^1.2"
 rdkit = "^2023.9.4"
@@ -23,6 +21,13 @@ guacamol = { path = "./src/guacamol", develop = true }
 scipy = "^1.12.0"
 pyarrow = "^15.0.0"
 loguru = "^0.7.2"
+# Additional original dependencies, not used in this project
+# cython = "0.29"
+# nltk = "3.4.5"
+# tensorflow = "1.13.2"
+# keras = "2.3.1"
+# h5py = "2.10"
+
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.13.2"
