--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,30 +8,30 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
-torch = "^2.1"          # Original 1.10
+torch = "^2.2"          # Original 1.10
 joblib = "^1.3"         # Original 0.12.5
 numpy = ">=1.26,<2"     # Original 1.21.4
 tqdm = "^4.66"          # Original 4.26.0
-# h5py = "3.10"
 pandas = "^2.2"
-fcd = "^1.2"
+# fcd = "^1.2"
 rdkit = "^2023.9.4"
 pre-commit = "^3.6.0"
+fcd = { path = "./src/fcd", develop = true }
 guacamol = { path = "./src/guacamol", develop = true }
 scipy = "^1.12.0"
 pyarrow = "^15.0.0"
 loguru = "^0.7.2"
 # Additional original dependencies, not used in this project
 # cython = "0.29"
+# h5py = "2.10"
+# keras = "2.3.1"
 # nltk = "3.4.5"
 # tensorflow = "1.13.2"
-# keras = "2.3.1"
-# h5py = "2.10"
-
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.13.2"
 ruff = "^0.1.14"
+memray = "^1.11.0"
 mypy = "^1.8.0"
 pandas-stubs = "^2.1.4.231227"
 
@@ -39,13 +39,15 @@ pandas-stubs = "^2.1.4.231227"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.ruff]
+extend-exclude = ["src/fcd/*.*", "src/guacamol/*.*"]
+
 [tool.mypy]
 python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 modules = "guacamol"
-mypy_path = "$MYPY_CONFIG_FILE_DIR/src/guacamol"
-# ignore_missing_imports = true
+mypy_path = "$MYPY_CONFIG_FILE_DIR/src/guacamol/guacamol"
 
 [[tool.mypy.overrides]]
 module = "guacamol"
